[package]
name = "pokemon_rust"
version = "0.1.0"
authors = ["Ghabriel <ghabriel.nunes@gmail.com>"]
edition = "2018"

[dependencies]
amethyst = { version = "0.13", features = ["nightly", "sdl_controller", "vulkan", "profiler"] }
amethyst_tiles = { version = "0.1", features = ["nightly"] }
failure = "0.1"
lazy_static = "1.3"
serde = "1.0"
